# photowebpage

./: LICENSE  README.md  README_DEV.md  pyproject.toml  run_demo.bash
src/photowebpage/: __init__.py  cli.py  common.py  html_generator.py  image_selection.py
testdata/input/chile/: README.md
tests/: test_image_selection.py
